# maxima_lsp

./: Cargo.toml  README.md
doc/: coc-maxima-spec.md
src/: db.rs  definitions.rs  docs.rs  docstring.rs  imports.rs  lib.rs  lisp_extractor.rs  main.rs  parser_audit.rs  paths.rs  server.rs
src/handlers/: completion.rs  hover.rs  mod.rs  semantic_tokens.rs  symbols.rs
tests/: docs_and_defs.rs  import_resolution.rs  maxpack_layout.rs  path_resolution.rs
