[package]
name = "maxima-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Yassin Achengli Benmouais <achengli@github.com>"]
description = "LSP server for Maxima CAS"

[[bin]]
name = "maxima-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tree-sitter = "0.26"
tree-sitter-maxima = { git = "https://github.com/stewsat/tree-sitter-maxima.git" }
tree-sitter-commonlisp = { git = "https://github.com/stewsat/tree-sitter-commonlisp.git", branch = "main" }
tracing = "0.1"
regex = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
